--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
-	"id": "obsidian-sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"id": "canvas-presentation",
+	"name": "Canvas Presentation",
+	"version": "0.0.1",
+	"minAppVersion": "1.1.0",
+	"description": "A plugin to help you display cards based on sequence.",
+	"author": "Boninall",
+	"authorUrl": "https://github.com/quorafind",
+	"fundingUrl": {
+		"Buy Me a Coffee": "https://www.buymeacoffee.com/boninall",
+		"爱发电": "https://afdian.net/a/boninall",
+		"支付宝": "https://cdn.jsdelivr.net/gh/Quorafind/.github@main/IMAGE/%E6%94%AF%E4%BB%98%E5%AE%9D%E4%BB%98%E6%AC%BE%E7%A0%81.jpg"
+	},
 	"isDesktopOnly": false
 }
